# Project_SoundImprovement

./: .dockerignore  Dockerfile  Doku_Daniel.docx  README.md  docker-compose.yml  main_gui.py  pyproject.toml
Docker/: StartDocker.md
src/: audio_engine.py  audio_player.py  audiofile.py  bandpass.py  equalizer.py  filter.py  main.py  plot.py  sinSig.py  spectral_gate.py
src_gui/: Audio_2_GUI.py  Tasks.txt  analysis.py  analysis_view.py  config.py  header.py  input_frame.py  input_view.py  main_content.py  main_window.py  output_frame.py  output_view.py  pipeline_frame.py  pipeline_view.py  window.py
